k8s/base/clamav/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clamav
  labels:
    app: clamav
    component: antivirus
    app.kubernetes.io/name: clamav
    app.kubernetes.io/component: antivirus
spec:
  type: ClusterIP
  ports:
  - port: 3310
    targetPort: clamd
    protocol: TCP
    name: clamd
  - port: 9810
    targetPort: metrics
    protocol: TCP
    name: metrics
  selector:
    app: clamav
    component: antivirus
  sessionAffinity: None
